# src/routes/maintenance.router.js
@@ -1,0 +1,12 @@
+const express = require("express")
+const router = express.Router()
+const maintenanceController = require("../controllers/maintenance.controller")
+
+
+// router.get('/', maintenanceController.getAllMaintenance)
+// router.post('/', maintenanceController.createMaintenance)
+// router.get('/available', maintenanceController.available)
+// router.
+
+module.exports = router
+
